improve: hasnext bool
